ocs_ci/templates/mcg/scalecli_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: scale-cli
  namespace: openshift-storage
spec:
  containers:
    - name: scale-cli
      image: quay.io/tuan_hoang1/scale-cli:latest
      # Override the default `aws` entrypoint in order to
      # allow the pod to run continuously and act as a relay
      command: ['/bin/sh']
      stdin: true
      tty: true
      volumeMounts:
      - name: service-ca
        mountPath: /cert/service-ca.crt
        subPath: service-ca.crt
  volumes:
  - name: service-ca
    configMap:
      name: scalecli-service-ca
